--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body> 
 
     <header>
-    <h1>MY WEBSHOP</h1>
+        <a href="index.html">
+            <h1>MY WEBSHOP</h1>
+        </a>
 
     <nav class="nav">
         <a class="navPage" href="shop.html">SHOP</a>
@@ -20,7 +22,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="containerIndex">
             <a href="shop.html">
                 <img src="images/news.png"></img>
             
