added headless link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Webshop/HOME</title>
     <link href="style.css" rel="stylesheet">
 </head>
+
+
 <body> 
 
     <header>
@@ -25,7 +27,6 @@
         <div class="containerIndex">
             <a href="shop.html">
                 <img src="images/news.png"></img>
-            
             <div class="centeredText">NEWS</div>
             </a>
         </div>
@@ -36,5 +37,8 @@
             <h1 class="footerText">MY WEBSHOP</h1>
         </div>
     </footer>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
