--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
 
     <main>
         <h1>EXPLORE OUR COLLECTIONS</h1>
-        <div class="container">
+        <!--<div class="container">
 
             <div class="category-item">
                 <figure>
@@ -145,7 +145,7 @@
               </div>
             </div>
 
-        </div>
+        </div>-->
     </main>
 
 
