fetched title to shop page in script.js

--- a/shop.html
+++ b/shop.html
@@ -26,9 +26,12 @@
 
     <main>
         <h1>EXPLORE OUR COLLECTIONS</h1>
-        <!--<div class="container">
 
-            <div class="category-item">
+        <div class="products"></div>
+
+       <!--<div class="container">
+
+             <div class="category-item">
                 <figure>
                   <a href="item.html">
                     <img id="1" src="images/Jacket1.png" alt="yellow rainjacket">
@@ -148,11 +151,13 @@
         </div>-->
     </main>
 
-
     <footer>
         <div class="footer">
             <h1 class="footerText">MY WEBSHOP</h1>
         </div>
     </footer>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
