--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop/HOME</title>
+    <link rel="icon" href="data:;base64,=">
     <link href="style.css" rel="stylesheet">
 </head>
 
