--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop/HOME</title>
     <link rel="icon" href="data:;base64,=">
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" defer rel="stylesheet">
 </head>
 
 
