--- a/item.html
+++ b/item.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RainyDays/SHOPPING CART</title>
+    <title>RainyDays/SELECTED_ITEM</title>
     <link rel="icon" href="data:;base64,=">
 
     <link href="styles.css/common.css" rel="stylesheet">
     <link href="styles.css/item.css" rel="stylesheet">
 
-<!-- Hotjar Tracking Code for RainyDaysFinal -->
+  <!-- Hotjar Tracking Code for RainyDaysFinal -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -41,7 +41,7 @@
 
       <main>
         <div>
-            <h1>SHOPPING CART</h1>
+            <h1>WATERPROOF PARKAS</h1>
         <section class="container">
             <div class="item">
                 <section>    
@@ -50,20 +50,22 @@
             </div>
             <div class="item">
                 <section>
-                    <h2>Your shopping cart</h2>
+                    <h2>Waterproof raincoat, mid length</h2>
                     <div class="text">
-                         <p>Item: Padded raincoat with reflector</p>
+                         <p>Water reppelent raincoat with belt and reflector. The perfect jacket for any outdoor activity.</p>
                          <p>1,299.00 NOK</p>
-                         <p>Shipping: Free</p>
-                         <p>Total: 1,299.00 NOK</p>
+                         <div class="sizes">
+                            <p class="size">S</p><p class="size">M</p><p class="size">L</p><p class="size">XL</p>
+                        </div>
                     </div>
-                <a href="purchase.html" class="cta-button">CHECKOUT</a>
+                <a href="cart.html" class="cta-button">ADD TO CART</a>
                 <a href="products.html" class="cta-button">SHOP</a>
                 </section>
             </div>
           </section>
         </div>
       </main>
+
 
       <footer>
         <div class="footerNav">
@@ -76,4 +78,4 @@
     <script src="script.js"></script>
 
 </body>
-</html>          
+</html>    
