--- a/products.html
+++ b/products.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webshop/HOME</title>
+    <title>RainyDays/SHOP</title>
+    <link href="styles.css/common.css" rel="stylesheet">
     <link rel="icon" href="data:;base64,=">
-    <link href="style.css" defer rel="stylesheet">
+
+   <!-- Hotjar Tracking Code for RainyDaysFinal -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:3413953,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 </head>
-
-
-<body> 
+<body>
 
     <header>
+      <div class="header_top">
         <a href="index.html">
-            <h1>MY WEBSHOP</h1>
+        <img class="logo" src="image_elements/RainyDays_Logo.png" alt="Mouintains logo">
         </a>
+    </div>
 
+    </div>
     <nav class="nav">
-        <a class="navPage" href="shop.html">SHOP</a>
-        <a class="navPage" href="item.html">PRODUCT</a>
-        <a class="navPage" href="cart.html">CART</a>
+        <a class="cta-button" href="products.html">SHOP</a>
+        <a class="cta-button" href="cart.html">CART</a>
     </nav>
     </header>
-
 
     <main>
         <h1>EXPLORE OUR COLLECTIONS</h1>
@@ -150,15 +162,17 @@
             </div>
 
         </div>-->
-    </main>
+      </main>
 
-    <footer>
-        <div class="footer">
-            <h1 class="footerText">MY WEBSHOP</h1>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-
-</body>
-</html>
+      <footer>
+          <div class="footerNav">
+              <a class="footerText" href="about.html">ABOUT</a>
+              <a class="footerText" href="contact.html">CONTACT</a>
+              <a class="footerText" href="index.html">HOME</a>
+          </div>
+      </footer>
+  
+      <script src="script.js"></script>
+  
+  </body>
+  </html>
