added featured products on index page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     </header>
 
     <main>
+
+        <div class="featured_title">
+                <h1>FEATURED PRODUCTS</h1>
+        
+            <div class="featured"></div> <!--FEATURED PRODUCTS FETCHED FROM WP API-->
+        </div>
+
         <h1>EXPLORE OUR COLLECTIONS</h1>
 
         <div class="container">
@@ -82,6 +89,7 @@
         </div>
     </footer>
 
+    <script src="featured.js"></script>
     <script src="script.js"></script>
 
 </body>
