--- a/item.html
+++ b/item.html
@@ -29,7 +29,7 @@
 
       <main>
         <div>
-            <h1>WATERPROOF PARKAS</h1>
+            <!--<h1>WATERPROOF PARKAS</h1>
         <section class="container">
             <div class="item">
                 <section>    
@@ -51,7 +51,7 @@
                 </section>
             </div>
           </section>
-        </div>
+        </div>-->
       </main>
 
 
