added function to featured products and products, leading to spesific item

--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header_top">
           <a href="index.html">
-          <img class="logo" src="image_elements/RainyDays_Logo.png" alt="Mouintains logo">
+          <img class="logo" src="image_elements/RainyDays_Logo.png" alt="Mountains logo">
           </a>
       </div>
   
