--- a/item.html
+++ b/item.html
@@ -28,8 +28,11 @@
       </header>
 
       <main>
-        <div>
-            <!--<h1>WATERPROOF PARKAS</h1>
+
+        <div class="product"></div> <!--FEATURED PRODUCTS FETCHED FROM WP API-->
+
+        <!--<div>
+            <h1>WATERPROOF PARKAS</h1>
         <section class="container">
             <div class="item">
                 <section>    
@@ -63,7 +66,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="item.js"></script>
 
 </body>
 </html>    
