added grid to item page and set classes to js

--- a/item.html
+++ b/item.html
@@ -29,32 +29,28 @@
 
       <main>
 
-        <div class="product"></div> <!--FEATURED PRODUCTS FETCHED FROM WP API-->
-
-        <!--<div>
-            <h1>WATERPROOF PARKAS</h1>
+        <div>
+            <h1>SELECTED ITEM</h1>
         <section class="container">
             <div class="item">
-                <section>    
-                   <img class="jacket1" src="images/Jacket1.png" alt="Yellow raincoat">
+                <section>
+                    <div class="product"></div>    
+                   <!--<img class="jacket1" src="images/Jacket1.png" alt="Yellow raincoat">-->
                 </section>
             </div>
             <div class="item">
                 <section>
-                    <h2>Waterproof raincoat, mid length</h2>
-                    <div class="text">
-                         <p>Water reppelent raincoat with belt and reflector. The perfect jacket for any outdoor activity.</p>
-                         <p>1,299.00 NOK</p>
-                         <div class="sizes">
+                    <div class="text"></div>
+                        <div class="sizes">
                             <p class="size">S</p><p class="size">M</p><p class="size">L</p><p class="size">XL</p>
                         </div>
-                    </div>
+                    
                 <a href="cart.html" class="cta-button">ADD TO CART</a>
-                <a href="products.html" class="cta-button">SHOP</a>
+                <a href="products.html" class="cta-button">SHOP</a></div>
                 </section>
             </div>
           </section>
-        </div>-->
+        </div>
       </main>
 
 
