deleted unused code and pages

--- a/cart.html
+++ b/cart.html
@@ -33,7 +33,7 @@
         <section class="container">
             <div class="item">
                 <section>    
-                   <img class="jacket1" src="images/Jacket1.png" alt="Yellow raincoat">
+                   <img class="jacket1" src="image_elements/Jacket1.png" alt="Yellow raincoat">
                 </section>
             </div>
             <div class="item">
