--- a/featured.html
+++ b/featured.html
@@ -28,8 +28,8 @@
     <main>
         <h1>EXPLORE OUR COLLECTIONS</h1>
 
-        <div class="products"></div>
-        
+        <div class="featured"></div>
+
       </main>
 
       <footer>
@@ -40,7 +40,7 @@
           </div>
       </footer>
   
-      <script src="script.js"></script>
+      <script src="featured.js"></script>
   
   </body>
   </html>
