finishing touches, deleting code from earlier before fetching from API

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
     </footer>
 
-    <script src="featured.js"></script>
+    <script src="JS/featured.js"></script>
 
 </body>
 </html>
