--- a/item.html
+++ b/item.html
@@ -61,7 +61,7 @@
         </div>
     </footer>
 
-    <script src="item.js"></script>
+    <script src="JS/item.js"></script>
 
 </body>
 </html>    
