--- a/cart.html
+++ b/cart.html
@@ -61,7 +61,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 
 </body>
 </html>          
