--- a/products.html
+++ b/products.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RainyDays/SHOP</title>
-    <link href="styles.css/common.css" rel="stylesheet">
     <link rel="icon" href="data:;base64,=">
+    <link href="styles.css/common.css" rel="stylesheet">
 
 </head>
 <body>
@@ -40,7 +40,7 @@
           </div>
       </footer>
   
-      <script src="script.js"></script>
+      <script src="JS/script.js"></script>
   
   </body>
   </html>
